<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_navigation_home"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/main_menu_text_home" />

    <item
        android:id="@+id/menu_navigation_wallet"
        android:icon="@drawable/ic_menu_wallet"
        android:title="@string/main_menu_text_wallet" />

    <item
        android:id="@+id/menu_navigation_history"
        android:icon="@drawable/ic_menu_history"
        android:title="@string/main_menu_text_history" />

    <item
        android:id="@+id/menu_navigation_notification"
        android:icon="@drawable/ic_menu_notification"
        android:title="@string/main_menu_text_notifications" />

    <item
        android:id="@+id/menu_navigation_account"
        android:icon="@drawable/ic_menu_account"
        android:title="@string/main_menu_text_account" />
</menu>